# anikninja-next-auth

./: .gitignore  LICENSE  README.md  composer.json  package.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adapters/django/: README.md
adapters/django/auth_manager/: views.py
adapters/fastapi/: README.md  auth_router.py  config.py
adapters/laravel/: README.md
adapters/laravel/routes/: README.md
configs/: permissions.json  policy.json  route-rules.json
core/auth/: auth_flow_manager.ts  session_manager.ts  token_manager.ts  two_factor_manager.ts
core/authorization/: permission_resolver.ts  policy_engine.ts  role_resolver.ts  rule_config_loader.ts
core/interfaces/: PolicyProvider.ts  SessionProvider.ts  TokenProvider.ts  UserProvider.ts
core/utils/: crypto.ts  jwt.ts  logger.ts  otp.ts
docs/: api-contract.md  architecture.md  auth-lifecycle.md  authorization-model.md  frontend-sdk.md  multi-tenant.md  policy-engine.md  security.md  threat-model.md
examples/: README.md
frontend-sdk/: middleware.ts
frontend-sdk/examples/nextjs-app/: README.md
frontend-sdk/hooks/: useAuth.ts
frontend-sdk/src/: authClient.ts  index.ts  permissionGuard.ts  routeGuard.ts  sessionManager.ts
scripts/: generate-keys.sh  release.sh  setup-dev.sh
tests/adapters/: README.md
tests/core/: README.md
tests/frontend-sdk/: README.md
