[tool.poetry]
name = "anikninja-fastapi-adapter"
version = "0.1.0"
description = "FastAPI adapter placeholder"
authors = ["anikninja <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
